--- a/README.pod
+++ b/README.pod
@@ -1,157 +1,12 @@
-package Test::LimitDecimalPlaces;
-
-use warnings;
-use strict;
-use Carp;
-use Exporter;
-use Test::Builder;
-
-use vars qw/ $VERSION @EXPORT @ISA /;
-
-BEGIN {
-    $VERSION = '0.01';
-    @ISA     = qw/ Exporter /;
-    @EXPORT  = qw/ limit_ok limit_ok_by limit_not_ok limit_not_ok_by /;
-}
-
-my $TestBuilder           = Test::Builder->new;
-my $default_num_of_digits = 7;
-
-sub import {
-    my $self  = shift;
-    my $pack  = caller;
-    my $found = grep /num_of_digits/, @_;
-
-    if ($found) {
-        my ( $key, $value ) = splice @_, 0, 2;
-
-        if ( $value < 0 ) {
-            croak 'Value of limit number of digits must be a number greater than or equal to zero.';
-        }
-        unless ( $key eq 'num_of_digits' ) {
-            croak 'Test::LimitDecimalPlaces option must be specified first.';
-        }
-        $default_num_of_digits = $value;
-    }
-
-    $TestBuilder->exported_to($pack);
-    $TestBuilder->plan(@_);
-    $self->export_to_level( 1, $self, $_ ) for @EXPORT;
-}
-
-sub _construct_err_msg {
-    my ( $x, $y, $num_of_digits ) = @_;
-
-    return
-        sprintf( "%.${num_of_digits}f", $x ) . ' and '
-      . sprintf( "%.${num_of_digits}f", $y )
-      . ' are not equal by limiting decimal places is ' . $num_of_digits;
-}
-
-sub _check {
-    my ( $x, $y, $num_of_digits ) = @_;
-
-    my $is_array = 0;
-
-    croak 'Value of limit number of digits must be a number '
-      . 'greater than or equal to zero.' if ( $num_of_digits < 0 );
-    $num_of_digits = int($num_of_digits);
-
-    my ($ok, $diag) = (1, '');
-
-    if (ref $x eq 'ARRAY' || ref $y eq 'ARRAY') {
-        $is_array = 1;
-        unless (scalar(@$x) == scalar(@$y)) {
-            $ok = 0;
-            $diag = "Got length of an array is " . scalar(@$x) .
-                    ", but expected length of an array is " . scalar(@$y);
-            return ($ok, $diag);
-        }
-    }
-
-    if ($is_array) {
-        for my $i ( 0 .. $#$x ) {
-            ($ok, $diag) = _check($x->[$i], $y->[$i], $num_of_digits);
-            unless ($ok) {
-                $diag .= ', number of element is ' . $i . ' in array';
-                last;
-            }
-        }
-    } else {
-        $ok = (
-            sprintf( "%.${num_of_digits}f", $x ) ==
-              sprintf( "%.${num_of_digits}f", $y ) );
-        $diag = _construct_err_msg( $x, $y, $num_of_digits ) unless ($ok);
-    }
-
-    return ( $ok, $diag );
-}
-
-sub _flip {
-    my ( $state, $x, $y, $num_of_digits, $is_array ) = @_;
-
-    $state = !$state;
-    my $diag;
-    unless ($state) {
-        if ($is_array) {
-            $diag = 'Both of arrays are the same.';
-        } else {
-            $diag = _construct_err_msg( $x, $y, $num_of_digits );
-            $diag =~ s/ not//;
-        }
-    }
-
-    return ( $state, $diag );
-}
-
-sub limit_ok_by($$$;$) {
-    my ( $x, $y, $num_of_digits, $test_name ) = @_;
-
-    my ( $ok, $diag ) = _check( $x, $y, $num_of_digits, $test_name );
-    return $TestBuilder->ok( $ok, $test_name ) || $TestBuilder->diag($diag);
-}
-
-sub limit_ok($$;$) {
-    my ( $x, $y, $test_name ) = @_;
-
-    {
-        local $Test::Builder::Level = $Test::Builder::Level + 1;
-        limit_ok_by( $x, $y, $default_num_of_digits, $test_name );
-    }
-}
-
-sub limit_not_ok_by($$$;$) {
-    my ( $x, $y, $num_of_digits, $test_name ) = @_;
-
-    my $is_array = 0;
-    $is_array = 1 if (ref $x eq 'ARRAY' || ref $y eq 'ARRAY' );
-
-    my ( $ok, $diag ) = _check( $x, $y, $num_of_digits, $test_name );
-    ( $ok, $diag ) = _flip( $ok, $x, $y, $num_of_digits, $is_array );
-    return $TestBuilder->ok( $ok, $test_name ) || $TestBuilder->diag($diag);
-}
-
-sub limit_not_ok($$;$) {
-    my ( $x, $y, $test_name ) = @_;
-
-    {
-        local $Test::Builder::Level = $Test::Builder::Level + 1;
-        limit_not_ok_by( $x, $y, $default_num_of_digits, $test_name );
-    }
-}
-
-1;
-__END__
+=encoding utf8
 
 =head1 NAME
 
 Test::LimitDecimalPlaces - Compare numerical values by limiting number of decimal places
 
-
 =head1 VERSION
 
 This document describes Test::LimitDecimalPlaces version 0.01
-
 
 =head1 SYNOPSIS
 
@@ -186,10 +41,9 @@ This module was made to solve this problem.
 This module provides test functions that can compare numerical values by limiting number of decimal places.
 These functions are using splintf() internally to limit number of decimal places.
 
-
 =head1 USAGE
 
-=over
+=over 4
 
 =item use Test::LimitDecimalPlaces;
 
@@ -215,10 +69,9 @@ Test::LimitDecimalPlaces-specific option must come first.
 
 =back
 
-
 =head1 FUNCTIONS
 
-=over
+=over 4
 
 =item limit_ok
 
@@ -258,21 +111,17 @@ But this function uses specified number of decimal places ($num_of_digits in cas
 
 =back
 
-
 =head1 CONFIGURATION AND ENVIRONMENT
 
 Test::LimitDecimalPlaces requires no configuration files or environment variables.
-
 
 =head1 DEPENDENCIES
 
 Test::Exception (version 0.31 or later)
 
-
 =head1 INCOMPATIBILITIES
 
 None reported.
-
 
 =head1 BUGS AND LIMITATIONS
 
@@ -282,11 +131,9 @@ Please report any bugs or feature requests to
 C<bug-test-limitdecimalplaces@rt.cpan.org>, or through the web interface at
 L<http://rt.cpan.org>.
 
-
 =head1 AUTHOR
 
 moznion  C<< <moznion@gmail.com> >>
-
 
 =head1 LICENCE AND COPYRIGHT
 
@@ -294,7 +141,6 @@ Copyright (c) 2012, moznion C<< <moznion@gmail.com> >>. All rights reserved.
 
 This module is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself. See L<perlartistic>.
-
 
 =head1 DISCLAIMER OF WARRANTY
 
@@ -318,3 +164,4 @@ RENDERED INACCURATE OR LOSSES SUSTAINED BY YOU OR THIRD PARTIES OR A
 FAILURE OF THE SOFTWARE TO OPERATE WITH ANY OTHER SOFTWARE), EVEN IF
 SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF
 SUCH DAMAGES.
+
