Checking in changes prior to tagging of version 0.01.
Changelog diff is:

diff --git a/Changes b/Changes
index f896bca..15cc357 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Test-LimitDecimalPlaces

-0.0.1  Wed Dec 12 15:23:47 2012
+0.01  2012 Mon Dec 31 13:58:28 JST 2012
        Initial release.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Test-LimitDecimalPlaces
 
-0.0.1  Wed Dec 12 15:23:47 2012
+0.01  2012 Mon Dec 31 13:58:28 JST 2012
        Initial release.
 
